[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/player.png" type="Texture" id=2]
[ext_resource path="res://assets/player/player_n.png" type="Texture" id=3]
[ext_resource path="res://scenes/enviroment/vignette.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/steps/FootstepsConcrete3.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/light.png" type="Texture" id=6]
[ext_resource path="res://assets/flashlight.png" type="Texture" id=7]

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 7, 3, 7, -3, 313, -92.6, 313, -7.6, 315, 71.4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 25 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shape:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shape:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shape:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )

[node name="SuitLight" type="Light2D" parent="Texture"]
position = Vector2( -6, 3 )
scale = Vector2( 2.5, 2.5 )
z_as_relative = false
texture = ExtResource( 6 )
texture_scale = 0.2
color = Color( 1, 1, 1, 0.454902 )
energy = 0.61
range_height = 469.3
shadow_enabled = true

[node name="Flashlight" type="Node2D" parent="."]
position = Vector2( 3, 0 )
z_as_relative = false

[node name="Light" type="Light2D" parent="Flashlight"]
position = Vector2( 4, -1 )
z_as_relative = false
texture = ExtResource( 7 )
texture_scale = 0.4
energy = 0.6
range_height = 2048.0
shadow_enabled = true
shadow_color = Color( 0.203922, 0.2, 0.196078, 0 )
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 18.9
shadow_item_cull_mask = 5

[node name="Body" type="LightOccluder2D" parent="Flashlight"]
light_mask = 6
position = Vector2( -16, 0 )
occluder = SubResource( 3 )
light_mask = 6

[node name="Area" type="Area2D" parent="Flashlight"]
position = Vector2( -39, -14 )
collision_layer = 16

[node name="Shape" type="CollisionPolygon2D" parent="Flashlight/Area"]
position = Vector2( 173, 3.57628e-07 )
polygon = PoolVector2Array( -144, 11, -23, -24, -10, 13, -21, 46, -143, 18 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Shape" type="CollisionPolygon2D" parent="."]
position = Vector2( -5, -2 )
polygon = PoolVector2Array( 37, 12, 36, 6, 25, 6, 15, -10, 11, -17, -10, -24, -16, -24, -23, -5, -26, 1, -24, 5, -27, 10, -27, 18, -21, 24, -15, 24, -11, 27, -7, 28, 0, 22, 8, 14 )

[node name="Vignette" parent="." instance=ExtResource( 4 )]

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="WalkTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 5 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.37
drag_margin_right = 0.42
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="body_entered" from="Hitbox" to="." method="on_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="on_body_exited"]
[connection signal="timeout" from="WalkTimer" to="." method="on_timer_timeout"]
